[x] [T_0005] - New User: Deposit First Wallet Success
