# src/controllers/middlewares/auth.go
@@ -11,7 +11,7 @@ func GetSessionIdFromRequest(r *http.Request) string {
 		return ""
 	}
 
-	// Usually format is "Bearer <token>"
+	// format is "Bearer <token>"
 	parts := strings.SplitN(authHeader, " ", 2)
 	if len(parts) != 2 || strings.ToLower(parts[0]) != "bearer" {
 		return ""
@@ -19,5 +19,21 @@ func GetSessionIdFromRequest(r *http.Request) string {
 
 	token := parts[1]
 
+	return token
+}
+
+func GetBasicAuthFromRequest(r *http.Request) string {
+	authHeader := r.Header.Get("Authorization")
+	if authHeader == "" {
+		return ""
+	}
+
+	// format is "Basic <Base64(username:password)>"
+	parts := strings.SplitN(authHeader, " ", 2)
+	if len(parts) != 2 || strings.ToLower(parts[0]) != "basic" {
+		return ""
+	}
+
+	token := parts[1]
 	return token
 }
